--- a/example/src/style.css
+++ b/example/src/style.css
@@ -7,8 +7,8 @@ body {
 
 #root {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* flex-direction: column;
+  align-items: center; */
   margin: 16px;
 }
 
